cros: Crash on lock if we enter bad authentication state.

There are numerous user reports of this issue. If we start crashing
in this situation I think there will be more useful diagnostics. The
only known way to get out of this state is to logout, so this is not a
UX regression.

Bug: 820671
Change-Id: Ie3643e9c841fdd5acaa65a2d0838da5f46c822a8
Reviewed-on: https://chromium-review.googlesource.com/974508
Commit-Queue: Jacob Dufault <jdufault@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546304}
Former-commit-id: 8876ba875ac9a5d4676b75dad1aa97e562839f01