ash/login/login_screen_controller.cc
@@ -85,14 +85,16 @@ void LoginScreenController::AuthenticateUser(const AccountId& account_id,
                                              const std::string& password,
                                              bool authenticated_by_pin,
                                              OnAuthenticateCallback callback) {
-  // Ignore concurrent auth attempts. This can happen if the user quickly enters
-  // two separate passwords and hits enter.
-  if (!login_screen_client_ || is_authenticating_) {
-    LOG_IF(ERROR, is_authenticating_) << "Ignoring concurrent auth attempt";
+  // It is an error to call this function while an authentication is in
+  // progress.
+  LOG_IF(ERROR, authentication_stage_ == AuthenticationStage::kIdle)
+      << "Authentication stage is " << static_cast<int>(authentication_stage_);
+  CHECK_EQ(authentication_stage_, AuthenticationStage::kIdle);
+
+  if (!login_screen_client_) {
     std::move(callback).Run(base::nullopt);
     return;
   }
-  is_authenticating_ = true;
 
   // If auth is disabled by the debug overlay bypass the mojo call entirely, as
   // it will dismiss the lock screen if the password is correct.
@@ -112,14 +114,13 @@ void LoginScreenController::AuthenticateUser(const AccountId& account_id,
       return;
   }
 
-  // |DoAuthenticateUser| requires the system salt, so we fetch it first, and
-  // then run |DoAuthenticateUser| as a continuation.
-  auto do_authenticate = base::BindOnce(
-      &LoginScreenController::DoAuthenticateUser, weak_factory_.GetWeakPtr(),
-      account_id, password, authenticated_by_pin, std::move(callback));
-  chromeos::SystemSaltGetter::Get()->GetSystemSalt(base::BindRepeating(
-      &LoginScreenController::OnGetSystemSalt, weak_factory_.GetWeakPtr(),
-      base::Passed(&do_authenticate)));
+  // |DoAuthenticateUser| requires the system salt.
+  authentication_stage_ = AuthenticationStage::kGetSystemSalt;
+  chromeos::SystemSaltGetter::Get()->GetSystemSalt(
+      base::AdaptCallbackForRepeating(
+          base::BindOnce(&LoginScreenController::DoAuthenticateUser,
+                         weak_factory_.GetWeakPtr(), account_id, password,
+                         authenticated_by_pin, std::move(callback))));
 }
 
 void LoginScreenController::AttemptUnlock(const AccountId& account_id) {
@@ -328,7 +329,8 @@ void LoginScreenController::SetDevChannelInfo(
 
 void LoginScreenController::IsReadyForPassword(
     IsReadyForPasswordCallback callback) {
-  std::move(callback).Run(LockScreen::IsShown() && !is_authenticating_);
+  std::move(callback).Run(LockScreen::IsShown() &&
+                          authentication_stage_ == AuthenticationStage::kIdle);
 }
 
 void LoginScreenController::SetPublicSessionDisplayName(
@@ -354,6 +356,8 @@ void LoginScreenController::DoAuthenticateUser(const AccountId& account_id,
                                                bool authenticated_by_pin,
                                                OnAuthenticateCallback callback,
                                                const std::string& system_salt) {
+  authentication_stage_ = AuthenticationStage::kDoAuthenticate;
+
   int dummy_value;
   bool is_pin =
       authenticated_by_pin && base::StringToInt(password, &dummy_value);
@@ -362,7 +366,7 @@ void LoginScreenController::DoAuthenticateUser(const AccountId& account_id,
 
   // Used for GAIA password reuse detection.
   password_manager::SyncPasswordData sync_password_data(
-      base::UTF8ToUTF16(password), /*force_update=*/false);
+      base::UTF8ToUTF16(password), false /*force_update*/);
 
   PrefService* prefs =
       Shell::Get()->session_controller()->GetLastActiveUserPrefService();
@@ -394,13 +398,9 @@ void LoginScreenController::DoAuthenticateUser(const AccountId& account_id,
 void LoginScreenController::OnAuthenticateComplete(
     OnAuthenticateCallback callback,
     bool success) {
-  is_authenticating_ = false;
+  authentication_stage_ = AuthenticationStage::kUserCallback;
   std::move(callback).Run(success);
-}
-
-void LoginScreenController::OnGetSystemSalt(PendingDoAuthenticateUser then,
-                                            const std::string& system_salt) {
-  std::move(then).Run(system_salt);
+  authentication_stage_ = AuthenticationStage::kIdle;
 }
 
 LoginDataDispatcher* LoginScreenController::DataDispatcher() const {
@@ -411,7 +411,7 @@ LoginDataDispatcher* LoginScreenController::DataDispatcher() const {
 
 void LoginScreenController::OnShow() {
   SetSystemTrayVisibility(SystemTrayVisibility::kPrimary);
-  is_authenticating_ = false;
+  CHECK_EQ(authentication_stage_, AuthenticationStage::kIdle);
 }
 
 }  // namespace ash
